--- a/README
+++ b/README
@@ -10,11 +10,12 @@ Installation:
 Usage:
 - Use your browser to log in on onlyfans.com
 - Find the cookie called 'sess' and copy the id
-- ./ofgrab.py <PROFILE_NAME> <YOUR_SESSION_ID>
+- Find the User-Agent string of your browser and copy it as well
+- ./ofgrab.py <PROFILE_NAME> <YOUR_SESSION_ID> <USER_AGENT_STRING>
 
 Trivia:
 - In the JSON payload for each post there’s a field called "fake_favorites_count".
-  Haven’t found any JS code which makes use of it, but I wouldn’t be suprised if
+  Haven’t found any JS code which makes use of it, but I wouldn’t be surprised if
   they have some monkey business going on.
 
 License:
