Add deprecation warning

--- a/README
+++ b/README
@@ -1,6 +1,13 @@
 ofgrab
 ~~~~~~
 
+<NOTICE>
+This software is deprecated and will not work anymore!
+
+However there is a working alternative:
+https://github.com/DIGITALCRIMINAL/OnlyFans
+</NOTICE>
+
 Archives videos and images from onlyfans.com profiles.
 Nothing more nothing less.
 
